--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@cacheable/node-cache": "^1.6.1",
     "@discordjs/collection": "^2.1.1",
     "@mengkodingan/consolefy": "^1.0.1",
-    "baileys": "npm:@rexxhayanasi/elaina-bail",
+    "baileys": "npm:@yupra/baileys",
     "libphonenumber-js": "^1.12.11",
     "pino": "^9.9.0",
     "vcard-parser": "^1.0.0"
